# tauri-playwright

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: add-trace-recorder.md  config.json  harden-eval-and-ipc.md  linux-screenshot-support.md  multi-window.md  per-window-native-screenshot.md
.github/workflows/: e2e.yml  release.yml
examples/hello-world/: index.html  package.json  tsconfig.json  vite.config.ts
examples/hello-world-bun/: package.json
examples/hello-world-bun/e2e/: fixtures.ts  playwright.config.ts
examples/hello-world-bun/e2e/tests/: smoke.spec.ts
examples/hello-world/e2e/: fixtures.ts  playwright.config.ts
examples/hello-world/e2e/tests/: advanced-features.spec.ts  app.spec.ts  auto-waiting.spec.ts  counter.spec.ts  greet.spec.ts  kitchen-sink.spec.ts  modal.spec.ts  multi-window.spec.ts  playwright-parity.spec.ts  screenshot-fail.spec.ts  todo.spec.ts
examples/hello-world/src/: App.tsx  ViewerWindow.tsx
examples/hello-world/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-world/src-tauri/capabilities/: default.json
examples/hello-world/src-tauri/src/: lib.rs  main.rs
examples/hello-world/src/lib/: tauri.ts
scripts/: sync-cargo-version.sh
