[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_world_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
e2e-testing = ["tauri-plugin-playwright"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-playwright = { path = "../../../packages/plugin", optional = true }
